# prsys-foundation

./: .env.example  .gitignore  .replit  CLAUDE.md  LICENSE  README.md  main.py  package-lock.json  package.json  pyproject.toml  replit.md
.claude/hooks/: session-start.sh
backend/: .gitignore  README.md  package-lock.json  package.json
backend/src/: claudeOrfheussService.ts  orfheussEngine.ts  server.ts  systemCheck.ts  types.ts
backend/src/auth/: middleware.ts  types.ts  userStore.ts
backend/src/routes/: auth.ts  taogate.ts
config/: default.yaml
diagrams/: flow.mmd
docentenhandleidingen/: DH_MBO4_Finance.md  DH_MBO4_Horeca_Bakkerij.md
examples/: sample_input.json  sample_output.txt  sample_transfer.json
prompts/: hbo-marketing-orfheuss.md  hbo-social-orfheuss.md  mbo4-marketing-orfheuss.md  mbo4-social-orfheuss.md  uni-marketing-orfheuss.md  uni-social-orfheuss.md
scripts/: build-index.mjs  import-docs.mjs  systeemcheck.mjs  taogate-classify.mjs
src/prsys/: audit.py  cli.py  llm_adapter.py  model.py  transfer_guard.py
src/taogate/: __init__.py  cli.py  config.py  lesson.py
tapes/: social_work.json
web/: eslint.config.js  index.html  library.css  library.html  library.js  package-lock.json  package.json  prsys-werkboek.html
web/assets/css/: style.css
web/assets/js/: main.js
web/src/: App.tsx  index.css  main.tsx  types.ts
web/src/data/: cases.ts  (+3 more)
workbooks/: SB_MBO4_Horeca_Bakkerij.md  WB_HBO_Marketing_Communicatie_ORFHEUSS.md  WB_MBO4_Finance.md  WB_MBO4_Horeca_Bakkerij.md  WB_MBO4_SocialMedia_Ethiek.md
workspace/: README.txt
(+42 files in other folders)
