[project]
name = "ti-gate"
version = "0.2.0"
description = "TI Gate – pre-governance load-capacity model met TI-GATE (TransferGuard)."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]

[project.scripts]
prsys = "prsys.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
