[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "taogate"
version = "0.1.0"
requires-python = ">=3.10"
description = "Taogate lesprogramma — AI, ethiek en grondhouding"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
taogate = "taogate.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
